# qTsConverter

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: clangFormat.yaml  cmake.yaml  cmakeFormat.yaml  codeql-analysis.yml  linux.yaml  linuxPackage.yaml  macos.yaml  w10.yaml  w10package.yaml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
data/: CMakeLists.txt  org.guerinoni.qTsConverter.appdata.xml  org.guerinoni.qTsConverter.desktop  org.guerinoni.qTsConverter.metainfo.xml  org.guerinoni.qTsConverter.yml  qTsConverter.desktop
doc/: CONTRIBUTING.md
scripts/: compile-cli.sh  compile.sh  createPackage.sh  debian.sh  install.sh  makeFlatpak.sh  org.guerinoni.qTsConverter.yml  qTsConverter.desktop  qTsConverter_x64.iss  ts-to-xlsx.sh  uninstall.sh  universal.sh  xlsx-to-ts.sh
src/: Builder.hpp  CMakeLists.txt  ConversionModel.cpp  ConversionModel.hpp  Converter.cpp  Converter.hpp  ConverterFactory.cpp  ConverterFactory.hpp  ConverterGuiProxy.cpp  ConverterGuiProxy.hpp  Csv2TsConverter.cpp  Csv2TsConverter.hpp  CsvBuilder.cpp  CsvBuilder.hpp  CsvParser.cpp  CsvParser.hpp  CsvProperty.hpp  InOutParameter.hpp  Parser.cpp  Parser.hpp  TranslationObject.hpp  Ts2CsvConverter.cpp  Ts2CsvConverter.hpp  Ts2XlsxConverter.cpp  Ts2XlsxConverter.hpp  TsBuilder.cpp  TsBuilder.hpp  TsParser.cpp  TsParser.hpp  XlsxBuilder.cpp  XlsxBuilder.hpp  XlsxParser.cpp  XlsxParser.hpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/internal/: Builder.cpp  Builder.hpp  CMakeLists.txt  CliRunner.cpp  CliRunner.hpp  ConversionModel.cpp  ConversionModel.hpp  Converter.cpp  Converter.hpp  ConverterFactory.cpp  ConverterFactory.hpp  ConverterGuiProxy.cpp  ConverterGuiProxy.hpp  CsvBuilder.cpp  CsvBuilder.hpp  CsvParser.cpp  CsvParser.hpp  HeaderObject.hpp  InOutParameter.hpp  Parser.cpp  Parser.hpp  Result.hpp  RootObject.hpp  TitleHeaders.hpp  TranslationObject.hpp  TsBuilder.cpp  TsBuilder.hpp  TsParser.cpp  TsParser.hpp  XlsxBuilder.cpp  XlsxBuilder.hpp  XlsxParser.cpp  XlsxParser.hpp  version.h.in  version.hpp
src/qml/: FinishDialog.qml  LoadFileDialog.qml  SaveFileDialog.qml  main.qml  qml.qrc
src/qml/assets/logos/: info.txt
tests/: CMakeLists.txt  main.cpp  ts2csv.cpp  tst_Csv2ts.cpp  tst_Csv2ts.hpp  tst_Ts2csv.cpp  tst_Ts2csv.hpp  tst_csv2ts.cpp  tst_ts2csv.cpp  tst_ts2xlsx.cpp  tst_xlsx2ts.cpp  util.hpp
tests/files/: all.ts  output.xlsx  scenario1.csv  scenario1.ts  scenario2.csv  scenario2.ts  scenario_after_version_4_5_0.csv  scenario_after_version_4_5_0.xlsx  scenario_multiLocation.csv  scenario_multiLocation.xlsx  scenario_multiline.csv  scenario_multiline.ts  scenario_multilocation.csv  scenario_multilocation.ts  scenario_multilocation.xlsx  scenario_simple.csv  scenario_simple.ts  scenario_simple.xlsx  scenario_ts_version.csv  scenario_ts_version.ts
